--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 								<img src="images/banner.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Welcome to My Portfolio</h1>
+								<h1>Muhammad Muzammil</h1>
 							</header>
 							<div class="content">
-								<p>Explore my projects, skills, and experience in the field of Computer Science.</p>
+								<p>CS at University of Calgary. Current Fellow at HeadStarter AI</p>
 							</div>
 						</div>
 					</section>
