--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 			<ul>
 				<u><li><a href="#projects">Projects</a></li></u>
 				<u><li><a href="#blog">Blog</a></li></u>
-				<u><li><a href="#about">About</a></li></u>
-				<u><li><a href="#contact">Contact</a></li></u>
-				<u><li><a href="#resume">Resume</a></li></u>
+				<u><li><a href="resume.html">Resume</a></li></u>
 			</ul>
 			<div class="profile-pic">
 				
