--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <div>
-        <embed src="resume.pdf" type="application/pdf" width="100%" height="600px" />
+        <embed src="muzammil_cv.pdf" type="application/pdf" width="100%" height="600px" />
     </div>
 </body>
 </html>
