update css to scale dynamically

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		  <div class="project-card">
 			<div class="project-info">
 			  <h3 class="project-title">RateXpose</h3>
-			  <a href="https://www.ratexpose.com/" class="project-button">See it in Action</a>
+			  <a href="https://www.ratexpose.ca/" class="project-button">See it in Action</a>
 			  <p class="project-description">
 				Started off as a hackathon idea. Currently developing and rebranding a platform that allows users to anonymously share and compare costs for services like auto and home insurance and utility bills.			  
 				<div class="project-tags">
