about section, experiences

--- a/index.html
+++ b/index.html
@@ -36,8 +36,20 @@
 		</ul>
 	</section>
 	
+	<!-- About Section -->
+	<section id="about">
+		<h2>About Me</h2>
+		<div class="about-content">
+			<p>
+				I'm a Computer Science student at the University of Calgary with a passion for creating engaging software experiences. My interests span from full-stack web development to game development, where I enjoy bringing creative ideas to life through code.
+			</p>
+			<p>
+				When I'm not coding, you'll find me exploring new technologies, working on game projects, or diving into the latest developments in software engineering. I believe in writing clean, maintainable code and continuously learning to improve my craft.
+			</p>
+		</div>
+	</section>
 
-    <!-- My Stack Section -->
+	   <!-- My Stack Section -->
     <section id="my-stack">
 		<h2>My Stack</h2>
 		<div class="stack-container">
@@ -100,6 +112,41 @@
 		  
 	</section>
 	
+	<!-- Experience Section -->
+	<section id="experience">
+		<h2>Experience</h2>
+		<div class="experience-container">
+			<div class="experience-card">
+				<div class="experience-header">
+					<div>
+						<h3 class="company-title">Cenovus</h3>
+						<h4 class="job-title">Software Engineer Student</h4>
+					</div>
+					<span class="experience-dates">May 2025 - Present</span>
+				</div>
+				<ul class="experience-bullets">
+					<li>Modernized plant HMI (Human-Machine Interface) screens using HTML and VB scripting to improve operational efficiency and user experience for process control operators</li>
+					<li>Developed automation solution for tag and point data management for over 13 sites in Lloyd, Cogent DataHub middleware, and corporate databases/PSI systems, eliminating manual import/export processes and saving 100s of hours of labor and around $100k over multi-year projections</li>
+					<li>Enhanced legacy industrial control systems by redesigning interface workflows and implementing automated data pipelines to streamline plant-to-corporate information transfer</li>
+				</ul>
+			</div>
+
+			<div class="experience-card">
+				<div class="experience-header">
+					<div>
+						<h3 class="company-title">Thinkera</h3>
+						<h4 class="job-title">Founding Engineer</h4>
+					</div>
+					<span class="experience-dates">July 2025 - Present</span>
+				</div>
+				<ul class="experience-bullets">
+					<li>Designed end-to-end Django-based document processing and analysis platform with intelligent multi-layered architecture</li>
+					<li>Architected parallel research orchestration system conducting multiple simultaneous API queries</li>
+					<li>Implemented comprehensive relational database schema with proper foreign key relationships</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 	
 	<section id="projects" class="projects-section">
 		<h2 class="section-title">Projects</h2>
