--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<nav>
 			<ul>
 				<u><li><a href="#projects">Projects</a></li></u>
-				<u><li><a href="#blog">Blog</a></li></u>
+				<u><li><a href="https://medium.com/@muzammilmuhammad12">Blog</a></li></u>
 				<u><li><a href="resume.html">Resume</a></li></u>
 			</ul>
 			<div class="profile-pic">
